# HIBP

./: .dockerignore  .gitignore  Dockerfile  README.md  build.js  docker-compose.yml  justfile  package.json  pyproject.toml
.github/workflows/: lint.yml  test.yml
doc/: benchmark.py
src/api/: dependencies.py  main.py  router.py
src/common/: __init__.py  classes.py  settings.py  types.py
src/init_scripts/: init_db_with_password_file.py
src/static/: check_password_leak.js  hash.js  index.html  interface_check_password_leak.js  interface_password_generation.js  main.css  password_generation.html  password_generation.js
src/static_test/: hash.test.js  hashPrefix.test.js  password_generation.test.js
tests/: conftest.py
tests/common/: test_password_storage.py
tests/init_scripts/: test_init_db_with_password_file.py
tests/integration/api/: test_api.py  test_password_leak.py
tests/integration/init_scripts/: test_init_db_with_password_file.py
tests/load_test/: locustfile.py
tests/unit_test/common/: test_password_hasher.py  test_password_storage.py
