[project]
name = "hibp"
version = "0.1.0"
description = "An Have I Been Pwned clone"
authors = []
readme = "README.md"
requires-python = ">=3.12, <4.0"

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.4"
testcontainers = {extras = ["generic"], version = "^4.9.1"}


[tool.poetry.dependencies]
redis = "^5.2.1"
docopt = "^0.6.2"
xxhash = "^3.5.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pydantic-settings = "^2.7.1"
httpx = "^0.28.1"
rich = "^13.9.4"

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "LOG"]
ignore = ["F401"]